Breaking: All translation moved to en_us * Started removal of Config references * Opt for default sounds file rather than hardcoded text

--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -73,3 +73,36 @@ notifications:
     &e&l!&7 Check your Quest Book for more Info
   task-failed-timeframe:  '&c&l!&7 You failed to complete a Task for the Quest &b%quest%&7 within the given Timeframe'
   task-timeframe-started: '&a&l!&7 You have &b%time%&7 of time to &b%task%'
+
+gui:
+  title: '&e&lQuest Book'
+  party: '&eParty Menu'
+button:
+  open: '&7> Click to open'
+  back:
+    party: '&7> Click to go back to the Party Menu'
+    quests: '&7> Click to go back to the Quest Menu'
+    general: '&c< Back'
+quests:
+  locked: '&4&lLOCKED'
+  locked-in-world: '&cThis Questline is not available in your World'
+  tasks_completed: ' Tasks completed'
+  state:
+    cooldown: '&e&lON COOLDOWN'
+    completed: '&2&lCOMPLETED'
+    reward_claimable: '&5&lUNCLAIMED REWARD'
+    reward_claim: '&5&lCLAIM REWARD'
+  display:
+    cooldown: '&7Cooldown'
+    monetary: '&7Monetary Reward'
+    exp: '&7XP Reward'
+    rewards: '&rRewards'
+category:
+  desc:
+    total: ' Quests in total'
+    completed: ' completed Quests'
+    available: ' Quests available for completion'
+    cooldown: ' Quests are on Cooldown'
+    claimable_reward: ' Quests with unclaimed Reward'
+task:
+  locked: '&4&lLOCKED'
