--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -38,34 +38,36 @@ editor:
   quest.perm-change: '&7Please type in a new permission node for &r%name%&8 (use "&7none&8" for no node)'
   quest.perm-set:    '&aSuccessfully set permission for &r%name%&a to %perm%'
   
-  renamed-citizen:       'PLACEHOLDER renamed citizen'
-  rename-kill-mission:   '&7Please type in the Name of the Mob/Player you want to be killed &8(Color Code supported)'
-  renamed-kill-type:     '&aSuccessfully specified a Name for your Mob/Player'
-  link-citizen:          '&7Please right click the NPC you want to link with this Quest'
-  link-citizen-finished: '&aSuccessfully linked this NPC'
-  rename-location: |
-    &7Please type in a Name for your Location
-    &7Example: Awesomeville
-  renamed-location: '&aSuccessfully given this Location a Name'
+  misssion-description: '&7Please type in a Description for your Quest'
+  mission.desc-set:     '&aSuccessfully set description for &r%name%'
   add-dialogue:     '&7Please type in the Message you want to add to the Dialogue! You can do this multiple times, simply type &eexit() &7when you are done! You can also add Commands! Just type in your command &e(ex. /say hello) &7and it will be executed within the Dialogue, use &e<player> &7for the Player''s Username'
   set-dialogue: |
     &7Successfully set a Dialogue!
     &7If you want to change something you can edit the Dialogue at any time at:
     &e%path%
-  edit-mission-name:    '&aSuccessfully edited the Mission''s Display Name'
-  await-mission-name:   '&7Please type in a Custom Name for this Mission'
-  misssion-description: '&7Please type in a Description for your Quest'
+  edit-mission-name:   '&aSuccessfully edited the Mission''s Display Name'
+  await-mission-name:  '&7Please type in a Custom Name for this Mission'
+  rename-kill-mission: '&7Please type in the Name of the Mob/Player you want to be killed &8(Color Code supported)'
+  renamed-kill-type:   '&aSuccessfully specified a Name for your Mob/Player'
+  rename-location: |
+    &7Please type in a Name for your Location
+    &7Example: Awesomeville
+  renamed-location: '&aSuccessfully given this Location a Name'
+  
+  # TODO These are part of the citizens extension... Why are they here?
+  link-citizen:          '&7Please right click the NPC you want to link with this Quest'
+  link-citizen-finished: '&aSuccessfully linked this NPC'
   
 party:
   full:       '&4You cannot have more than &c%max% &4Party Members!'
+  not-online: '&cPlayer &4%name% &cis not online'
+  already:    '&4%name% &cis already a Member of a Party'
   invite:     '&7Please type in the Name of the Player you want to invite'
   invited:    '&7Successfully invited &e%name% &7to your Party'
-  invitation: '&e%name% &7has invited you to join their Party'
-  not-online: '&cPlayer &4%name% &cis not online'
   join:       '&e%name% has accepted your Invitation and joined your Party'
-  joined:     '&7You are now a member of &e%name%''s &7Party!'
   kicked:     '&e%name% &7has been kicked from the Party'
-  already:    '&4%name% &cis already a Member of a Party'
+  invitation: '&e%name% &7has invited you to join their Party'
+  joined:     '&7You are now a member of &e%name%''s &7Party!'
 
 notifications:
   task-completed: |
