Lots of fixes, nearly stable! Sort of! * Added text wrapping to most elements (Fixes ezeiger92/QuestWorld2#58)   * There are still places this is not applied, but at least all areas where translations are used make use of this * Changed GuideBook to partially support changing lore (old books stop working after a restart) * Moved translations "book.display" and "book.lore" into "guide-book" * Moved translations "navigation.display" and "navigation.lore" into "navigation.item" * Fixed default death behavior not resetting progress * Fixed Mission.copy not clearing old lists before copying new data * Fixed quest editor gui not allowing for another page until 2 elements exist in that page

--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -12,6 +12,11 @@ book:
     &rYour basic Guide for Quests
     &rIn case you lose it, simply place a
     &rWorkbench into your Crafting Grid
+guide-book: |
+  &eQuest Book &7(Right Click)
+  
+  &rYour basic Guide for Quests
+  If you lose it, simply craft a new one with a Workbench
 
 navigation:
   display: '&7Page %page%/%pages%'
@@ -23,6 +28,11 @@ navigation:
   prefix-last: '&c'
   prefix-next-inactive: '&7&o'
   prefix-last-inactive: '&7&o'
+  item: |
+    &7Page %page%/%pages%
+    %pre-next%Next page (left-click)
+    %pre-last%Prev page (right-click)
+    &6&oHold shift to jump to the end
 
 editor:
   category.created:     '&aSuccessfully created a category called &r%name%'
