Add missing colorizations Invalidate old tellraw commands

--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -47,7 +47,7 @@ editor:
   
   misssion-description: '&7Please type in a Description for your Quest'
   mission.desc-set:     '&aSuccessfully set description for &r%name%'
-  add-dialogue:         '&7Please type in the Message you want to add to the Dialogue! You can do this multiple times, simply type &eexit() &7when you are done! You can also add Commands! Just type in your command &e(ex. /say hello) &7and it will be executed within the Dialogue, use &e<player> &7for the Player''s Username'
+  add-dialogue:         '&7Please type in messages or commands for your Dialogue. Type &eexit() &7when done.'
   added-dialogue-text:    '&7Added dialogue: %line%'
   added-dialogue-command: '&7Added command: %command%'
   set-dialogue: |
