--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -27,21 +27,22 @@ navigation:
   prefix-last-inactive: '&7&o'
 
 editor:
-  category.created:     '&aSuccessfully created a category called &r%name%'
-  category.deleted:     '&cSuccessfully deleted the category &r%name%'
-  category.name-change: '&7Please type a new category name for &r%name%&8 (color codes are supported)'
+  category.created:     '&aSuccessfully created a category called &r%category.name%'
+  category.deleted:     '&cSuccessfully deleted the category &r%category.name%'
+  category.name-change: '&7Please type a new category name for &r%category.name%&8 (color codes are supported)'
   category.name-set:    '&aSuccessfully renamed category &r%name_old%&a to &r%name%'
-  category.perm-change: '&7Please type in a new permission node for &r%name%&8 (use "&7none&8" for no node)'
-  category.perm-set:    '&aSuccessfully set permission for &r%name%&a to &r%perm%'
+  category.perm-change: '&7Please type in a new permission node for &r%quest.name%&8 (use "&7none&8" for no node)'
+  category.perm-set:    '&aSuccessfully set permission for &r%quest.name%&a to &r%quest.permission_full%'
   category.description: |2
+    %category.name%
 
-    %progress%
+    %category.progress_bar%
 
-    &7%total% Quests in total
-    &7%completed% completed Quests
-    &7%available% Quests available for completion
-    &7%cooldown% Quests are on Cooldown
-    &7%reward% Quests with unclaimed Reward
+    &7%category.count_quests% Quests in total
+    &7%category.count_quests_finished% completed Quests
+    &7%category.count_quests_available% Quests available for completion
+    &7%category.count_quests_on_cooldown% Quests are on Cooldown
+    &7%category.count_quests_reward_claimable% Quests with unclaimed Reward
   quest.created:     '&aSuccessfully created a category called &r%name%'
   quest.deleted:     '&cSuccessfully deleted the quest &r%name%'
   quest.name-change: '&7Please type a new quest name for &r%name%&8 (color codes are supported)'
